--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <link rel="stylesheet" href="index.css" type="text/css">
 </head>
 <body>
+    jdfshlajhfahfDSKN
+    <h1>LSDJASKFH</h1>
 <div class="chessboard">
 <!-- 1st -->
 <div class="white">&#9820;</div>
