--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
     jdfshlajhfahfDSKN
     <h1>LSDJASKFH</h1>
+    <h2>jfhdjsfhiuafga</h2>
 <div class="chessboard">
 <!-- 1st -->
 <div class="white">&#9820;</div>
